--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.476.0",
-    "next": "^15.3.0-canary.6",
+    "next": "^15.2.2",
     "next-intl": "^4.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -39,6 +39,7 @@
     "lint-staged": "^15.2.0",
     "postcss": "^8",
     "prettier": "^3.2.0",
+    "sass": "^1.85.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
